--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+
+.dark body {
+  background-color: #111827;
+  color: #f9fafb;
 }
 
 code {
