style: Hide scrollbar for mobile-first platform selector

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,26 @@ code {
 * {
   box-sizing: border-box;
 }
+
+/* Hide scrollbar for mobile-first experience */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari and Opera */
+}
+
+/* Also hide scrollbar on any overflow-x-auto elements */
+.overflow-x-auto::-webkit-scrollbar {
+  display: none;
+}
+
+.overflow-x-auto {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
