--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,14 @@ code {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+/* Remove numeric input spinners (arrows) */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
